--- a/App.xaml
+++ b/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:DocsControl"
-             StartupUri="Login.xaml">
+             StartupUri="MainWindow.xaml">
              <!--StartupUri="Dialogs\dAddEditDocs.xaml">-->
     <Application.Resources>
         <ResourceDictionary>
