--- a/Dialogs/dDocInfo.xaml
+++ b/Dialogs/dDocInfo.xaml
@@ -15,7 +15,7 @@
         Height="652.66" 
         Width="565.317" 
         WindowStyle="None">
-    <Grid Margin="0,0,0,70">
+    <Grid Margin="0,0,0,70"  MouseDown="StackPanel_MouseDown">
 
 
         <Label          
