--- a/View/vListPage.xaml
+++ b/View/vListPage.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="DocsControl.View.ListPage"
+﻿<UserControl x:Class="DocsControl.ViewModel.vmListPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:DocsControl.View"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"    
+          xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"    
              FontFamily="Century Gothic"
              mc:Ignorable="d" 
              d:DesignHeight="450"
@@ -21,7 +21,8 @@
 
         <StackPanel Grid.Row="1">
             <Label
-                Content="USERS"            
+                Name="lblTitle"
+                Content="HATDOG"            
                 Foreground="#008080"
                 FontSize="55"/>
         </StackPanel>
@@ -36,6 +37,14 @@
                 Style="{StaticResource MaterialDesignFloatingHintComboBox}">
             </ComboBox>
 
+        </StackPanel>
+
+        <StackPanel Grid.Row="3">
+            <DataGrid
+                Background="Gray"
+                Height="200">
+                
+            </DataGrid>
         </StackPanel>
     </Grid>
 </UserControl>
